Fixed bokeh animation and hid the scrollbars

--- a/ui/bokeh.css
+++ b/ui/bokeh.css
@@ -14,16 +14,14 @@
     width: 500px;
     height: 500px;
     background: #650d61;
-    animation-name: bokehOne;
-    animation-duration: 80s;
+    animation: bokehOne 120s alternate infinite;
 }
 
 .bokeh-2 {
     width: 300px;
     height: 300px;
     background: #e92e2e;
-    animation-name: bokehTwo;
-    animation-duration: 100s;
+    animation: bokehTwo 80s alternate infinite;
 }
 
 .bokeh-3 {
