--- a/ui/global.css
+++ b/ui/global.css
@@ -36,6 +36,10 @@ html {
     height: 100%;
 }
 
+body {
+  overflow: hidden; /* Hide scrollbars */
+}
+
 #main {
     background: rgb(2,0,36);
     background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(26,28,44,1) 62%, rgba(114,4,145,1) 100%); 2C;
@@ -72,17 +76,6 @@ html {
     color: white;
     margin-bottom: 2rem;
 }
-
-/* .bokeh { */
-/*     position: absolute; */
-/*     left: 40px; */
-/*     top: 80px; */
-/*     width: 400px; */
-/*     height: 400px; */
-/*     border-radius: 50%; */
-/*  background: rgb(255,229,229); */
-/* background: radial-gradient(circle, rgba(255,229,229,1) 0%, rgba(255,231,253,0) 100%);  */
-/* } */
 
 .flex-col {
     flex-direction: column;
